Fix incorrect layout name used in place of "screen"

--- a/src/layouts/content.astro
+++ b/src/layouts/content.astro
@@ -3,7 +3,7 @@
  * layout for all pages (except résumé and writings)
  *
  * root
- * └─ main
+ * └─ screen
  *    └─ content (this)
  *
  * All pages use this layout, except résumé and writings that extend the parent
