--- a/src/layouts/resume.astro
+++ b/src/layouts/resume.astro
@@ -3,7 +3,7 @@
  * layout for résumé index and org/epic pages
  *
  * root
- * └─ main
+ * └─ screen
  *    └─ resume (this)
  *
  * Provides two slots:
