--- a/src/layouts/screen.astro
+++ b/src/layouts/screen.astro
@@ -3,7 +3,7 @@
  * base layout for pages meant for the screen
  *
  * root
- * └─ main (this)
+ * └─ screen (this)
  *
  * This layout adds the site header and footer and can render content in two
  * panes, which are intelligently rendered based on the screen width.
