--- a/src/layouts/writings.astro
+++ b/src/layouts/writings.astro
@@ -3,7 +3,7 @@
  * layout for writings index and post pages
  *
  * root
- * └─ main
+ * └─ screen
  *    └─ writings (this)
  *
  * Provides two slots:
