Remove incorrectly applied class `.cntnr`

--- a/src/layouts/writings.astro
+++ b/src/layouts/writings.astro
@@ -106,7 +106,7 @@ const categories = await getCategories()
           data={postsData}
         />
       ) : (
-        <p class="cntnr text-yellow">
+        <p class="text-yellow">
           <Icon
             source="lucide"
             name="circle-slash-2"
